<resources>
    <string name="app_name">NeoCyberFashion</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="girl_image">Girl Image</string>
    <string name="continue_button">Continue Button</string>
    <string name="welcome">Welcome</string>
    <string name="promo">Sign In to get started and experience\ngreat shopping deals</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="user_name">User Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="sign_up">Sign Up</string>
</resources>