<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.SignInUser">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/semi_red"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/varela_round"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="162dp"
        android:layout_height="76dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInText"
        android:layout_marginTop="26dp"
        android:contentDescription="@string/logo" />

    <RelativeLayout
        android:id="@+id/welcome_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo"
            android:layout_below="@+id/welcome_text"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"/>

    </RelativeLayout>


    <TextView
        android:id="@+id/email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/welcome_layout"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_tag"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address" />

    <TextView
        android:id="@+id/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/email_address"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_tag"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:autofillHints="Email Address" />

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:layout_below="@id/password"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="14sp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="80dp"
        android:backgroundTint="#FA4248"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/forget_password"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpLayout"
        android:layout_below="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/semi_red" />



    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="#FA4248"
            android:layout_marginStart="5dp"/>

    </LinearLayout>


</RelativeLayout>