<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.RegisterNewUser">

    <TextView
        android:id="@+id/signInText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/semi_red"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/varela_round"
        android:layout_marginEnd="20dp"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="162dp"
        android:layout_height="76dp"
        android:src="@drawable/logo"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/signInText"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/logo" />

    <FrameLayout
        android:id="@+id/profile_image_frame"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:src="@drawable/avatar"
            android:layout_gravity="bottom|center_horizontal" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/add_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_add_24"
            android:layout_gravity="top|end"

            />
    </FrameLayout>

    <TextView
        android:id="@+id/user_name_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_below="@+id/profile_image_frame"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_tag"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:hint="@string/enter_your_name"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address" />


    <TextView
        android:id="@+id/email_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/user_name"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/email_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_tag"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:autofillHints="Email Address" />

    <TextView
        android:id="@+id/password_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_below="@+id/email_address"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_tag"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="18sp"
        android:hint="@string/enter_your_password"
        android:inputType="textPassword"
        android:autofillHints="Email Address" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cornerRadius="80dp"
        android:backgroundTint="#FA4248"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/password"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signUpLayout"
        android:layout_below="@+id/signUpButton"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/semi_red" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_regular"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="#FA4248"
            android:layout_marginStart="5dp"/>

    </LinearLayout>


</RelativeLayout>