<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".splash.WelcomeScreen1">

    <ImageView
        android:id="@+id/girl_image"
        android:layout_width="match_parent"
        android:layout_height="520dp"
        android:src="@drawable/splash02"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/girl_image" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/girl_image"
        app:layout_constraintBottom_toTopOf="@+id/continue_image">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/promo"
            android:layout_below="@+id/welcome_text"
            android:textAlignment="center"
            android:textSize="14sp"
            android:fontFamily="@font/montserrat_regular"/>

    </RelativeLayout>


    <ImageView
        android:id="@+id/continue_image"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:src="@drawable/bottom"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/continue_button" />


</androidx.constraintlayout.widget.ConstraintLayout>